--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,8 @@
             android:value="com.tt.jobtracker.MainActivity" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyC98QE8nR6uxr4AEF1G-m9YrGO57KX2Sz0" />
-
+            android:value="AIzaSyC2Q4qSKGqB8ZCqDK9GLz1T179du61xIwk" />
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.tt.jobtracker.Login"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -158,9 +158,12 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <activity
+            android:name="com.tt.jobtracker.MapForSingleShopActvity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+
 
 
         <receiver
