--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:targetSdkVersion="21" />
 
     <permission
-        android:name="com.example.androidmapsv2.permission.MAPS_RECEIVE"
+        android:name="com.tt.jobtracker.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.example.androidmapsv2.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.tt.jobtracker.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -44,13 +44,18 @@
             android:value="com.tt.jobtracker.MainActivity" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCK7KhKHL4Wj6_h2oJNpdhXdmPIcV6sB2I" />
+        android:value="AIzaSyC2Q4qSKGqB8ZCqDK9GLz1T179du61xIwk"/>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.tt.jobtracker.Login"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.SEARCH" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
 
             <!--
                   <intent-filter>
@@ -70,7 +75,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
 
             <meta-data
