--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tt.jobtracker"
-    android:versionCode="2"
-    android:versionName="2.0">
+    android:versionCode="3"
+    android:versionName="2.1">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -20,7 +20,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_GPS" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION" />
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-permission android:name="com.tt.jobtracker.permission.C2D_MESSAGE" />
@@ -37,6 +37,7 @@
     android:glEsVersion="0x00020000"
     android:required="true" />
     <application
+
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -51,7 +52,7 @@
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.tt.jobtracker.Login"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"><intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -86,6 +87,23 @@
                 android:resource="@xml/searchable" />
         </activity>
 
+        <activity
+            android:name="com.tt.jobtracker.Admin_MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.SEARCH" />
+
+
+        </intent-filter>
+
+        <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
+        </activity>
         <activity
             android:name="com.tt.jobtracker.FullScreenImageViewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -176,6 +194,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
+
 
 
 
