--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,7 @@
         android:maxSdkVersion="18" />
 
 
-    android:glEsVersion="0x00020000"
-    android:required="true" />
+
     <application
 
         android:allowBackup="true"
@@ -48,7 +47,7 @@
             android:value="com.tt.jobtracker.MainActivity" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCK7KhKHL4Wj6_h2oJNpdhXdmPIcV6sB2I"/>
+            android:value="AIzaSyC2Q4qSKGqB8ZCqDK9GLz1T179du61xIwk"/>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.tt.jobtracker.Login"
@@ -99,7 +98,9 @@
 
 
         </intent-filter>
-
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         <meta-data
             android:name="android.app.searchable"
             android:resource="@xml/searchable" />
@@ -188,7 +189,7 @@
             android:name="com.tt.jobtracker.MapForSingleShop"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" />MapForMultipleShop
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.tt.jobtracker.MapForMultipleShop"
             android:configChanges="keyboardHidden|orientation|screenSize"
